--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "r.lsp.promptToInstall": false
+    "r.lsp.promptToInstall": false,
+    "python.analysis.extraPaths": [
+        "/home/franfram/.vscode/extensions/continue.continue-0.0.412-linux-x64"
+    ],
+    "python.autoComplete.extraPaths": [
+        "/home/franfram/.vscode/extensions/continue.continue-0.0.412-linux-x64"
+    ]
 }
